@startuml

title __PAYROLL's Class Diagram__\n

  namespace project.mini.payroll {
    class project.mini.payroll.Admin {
        ~ engineersList : ArrayList<Engineer>
        ~ traineesList : ArrayList<Trainee>
        {static} - password : String
        {static} - username : String
        + Admin()
        + addEngineer()
        + addTrainee()
        + calculateSalary()
        + calculateSalary()
        + deleteEngineer()
        + deleteTrainee()
        + editEngineer()
        + editTrainee()
        {static} + getPassword()
        {static} + getUsername()
        + searchEngineer()
        + searchTrainee()
        + viewEngineer()
        + viewTrainee()
    }
  }
  

  namespace project.mini.payroll {
    abstract class project.mini.payroll.Employee {
        # salary : double
        - age : int
        - id : int
        - name : String
        + Employee()
        + Employee()
        + getAge()
        + getID()
        + getName()
        + getSalary()
        + setAge()
        + setID()
        + setName()
        + setSalary()
    }
  }
  

  namespace project.mini.payroll {
    class project.mini.payroll.Engineer {
        - workinghours : int
        + Engineer()
        + getGrade()
        + getSalary()
        + getWorkinghours()
        + setGrade()
        + setSalary()
        + setWorkinghours()
        + toString()
    }
  }
  

  namespace project.mini.payroll {
    enum Grade {
      Manager
      TeamLeader
      TeamMember
      Position
      payRate
      taxRate
    }
  }
  

  namespace project.mini.payroll {
    class project.mini.payroll.ProjectMiniPayroll {
        + ProjectMiniPayroll()
        {static} + main()
    }
  }
  

  namespace project.mini.payroll {
    class project.mini.payroll.Trainee {
        - GPA : double
        - academicYear : int
        {static} - salary : int
        - uniName : String
        + Trainee()
        + Trainee()
        + getAcademicYear()
        + getGPA()
        + getUniName()
        + setAcademicYear()
        + setGPA()
        + setUniName()
        + toString()
    }
  }
  

  project.mini.payroll.Engineer -up-|> project.mini.payroll.Employee
  project.mini.payroll.Engineer o-- project.mini.payroll.Admin : admin
  project.mini.payroll.Engineer o-- project.mini.payroll.Grade : grade
  project.mini.payroll.Trainee -up-|> project.mini.payroll.Employee


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
